--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate"
   },
-  "packageManager": "yarn@1.22.19",
+  "packageManager": "pnpm@7.18.1",
+  "engines": {
+    "node": ">=18.13.0",
+    "pnpm": "^7.18.1"
+  },
   "keywords": [
     "vite-plugin",
     "angular"
@@ -32,9 +36,6 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "private": true,
-  "workspaces": [
-    "apps/docs-app"
-  ],
   "dependencies": {
     "@analogjs/content": "*",
     "@angular/animations": "15.1.0",
@@ -49,6 +50,7 @@
     "@nrwl/angular": "15.4.5",
     "marked": "^4.2.4",
     "front-matter": "^4.0.2",
+    "react": "17.0.2",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -62,10 +64,12 @@
     "@angular/compiler-cli": "15.1.0",
     "@angular/language-service": "15.1.0",
     "@astrojs/markdown-component": "^1.0.1",
+    "@babel/core": "7.20.2",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@ngtools/webpack": "~15.1.0",
     "@nrwl/cli": "15.4.5",
+    "@nrwl/devkit": "15.4.5",
     "@nrwl/cypress": "15.4.5",
     "@nrwl/eslint-plugin-nx": "15.4.5",
     "@nrwl/jest": "15.4.5",
@@ -74,6 +78,7 @@
     "@nrwl/workspace": "15.4.5",
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
+    "@types/babel__core": "7.1.20",
     "@types/jest": "29.1.2",
     "@types/marked": "^4.0.8",
     "@types/node": "18.8.4",
@@ -86,9 +91,12 @@
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
     "cypress": "^11.0.0",
+    "destr": "1.2.2",
+    "esbuild": "0.15.10",
     "eslint": "~8.25.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "h3": "0.8.6",
     "jest": "29.1.2",
     "jsdom": "^20.0.1",
     "kolorist": "^1.6.0",
@@ -112,6 +120,7 @@
     "typescript": "4.8.4",
     "vite": "4.0.3",
     "vitest": "0.25.8",
+    "webpack": "^5.54.4",
     "webpack-bundle-analyzer": "^4.6.1"
   }
 }
