--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "vite": "^3.2.3",
+    "vite": "^4.0.0-beta.4",
     "vitest": "^0.25.1",
     "webpack-bundle-analyzer": "^4.6.1"
   }
