--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@angular/platform-server": "15.0.0",
     "@angular/router": "15.0.0",
     "@nrwl/angular": "15.4.1",
+    "marked": "^4.2.4",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -72,6 +73,7 @@
     "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
+    "@types/marked": "^4.0.8",
     "@types/node": "18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
