--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -11,7 +11,10 @@
         "outputPath": "node_modules/@analogjs/platform",
         "main": "packages/platform/src/index.ts",
         "tsConfig": "packages/platform/tsconfig.lib.json",
-        "assets": ["packages/platform/*.md"],
+        "assets": [
+          "packages/platform/*.md",
+          "packages/platform/src/lib/runtime/*.js"
+        ],
         "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
