--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,8 +155,8 @@ jobs:
       - name: Build
         run: pnpm exec nx build docs-app
       - name: Upload docs website
-        # Runs on merge to the `main` branch
-        if: github.event_name == 'push' && github.ref_name == 'main'
+        # Runs on merge to the `main/beta` branch
+        if: github.event_name == 'push' && (github.ref_name == 'main'  || github.ref_name == 'beta')
         uses: actions/upload-artifact@v3
         with:
           if-no-files-found: error
@@ -172,7 +172,7 @@ jobs:
       - unit
       - e2e
       - docs
-    # Runs on merge to the `main` branch
+    # Runs on merge to the `main/beta` branch
     if: github.event_name == 'push' && (github.ref_name == 'main' || github.ref_name == 'beta')
     runs-on: ubuntu-latest
     environment:
