--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analogjs-platform",
-  "version": "1.2.1-beta.4",
+  "version": "1.2.1",
   "license": "MIT",
   "type": "module",
   "scripts": {
