--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-analog",
-  "version": "1.2.1-beta.4",
+  "version": "1.2.1",
   "type": "module",
   "license": "MIT",
   "author": "Brandon Roberts",
