--- a/packages/create-analog/template-angular-v16/package.json
+++ b/packages/create-analog/template-angular-v16/package.json
@@ -15,8 +15,8 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^0.2.0",
-    "@analogjs/router": "^0.2.0",
+    "@analogjs/content": "~1.1.0",
+    "@analogjs/router": "~1.1.0",
     "@angular/animations": "^16.2.0",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
@@ -26,7 +26,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@nx/angular": "^17.0.0",
+    "@nx/angular": "~18.0.0",
     "front-matter": "^4.0.2",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
@@ -38,15 +38,15 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.0",
+    "@analogjs/platform": "~1.1.0",
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "^16.2.0",
     "@angular/compiler-cli": "^16.2.0",
-    "@nx/vite": "~16.8.1",
-    "nx": "^17.0.0",
+    "@nx/vite": "~18.0.0",
+    "nx": "~18.0.0",
     "jsdom": "^22.1.0",
     "typescript": "~5.0.2",
-    "vite": "^4.4.8",
-    "vitest": "^0.32.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1"
   }
 }
