--- a/packages/create-analog/template-angular-v17/package.json
+++ b/packages/create-analog/template-angular-v17/package.json
@@ -50,5 +50,8 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
     "vitest": "^1.3.1"
+  },
+  "stackblitz": {
+    "startCommand": "vite"
   }
 }
