--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-analog",
-  "version": "1.3.1-beta.9",
+  "version": "1.3.1",
   "type": "module",
   "license": "MIT",
   "author": "Brandon Roberts",
