--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@analogjs/vite-plugin-angular",
-  "version": "1.3.1-beta.9",
+  "version": "1.3.1",
   "description": "Vite Plugin for Angular",
   "type": "module",
   "keywords": [
