--- a/packages/vitest-angular/tsconfig.lib.json
+++ b/packages/vitest-angular/tsconfig.lib.json
@@ -5,6 +5,6 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "setup-zone.ts"],
   "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
