--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -29,6 +29,7 @@
     "@analogjs/vite-plugin-nitro": "^1.4.0-beta.10"
   },
   "peerDependencies": {
+    "@nx/angular": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "@nx/devkit": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "@nx/vite": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
