--- a/packages/create-analog/template-latest/package.json
+++ b/packages/create-analog/template-latest/package.json
@@ -18,7 +18,6 @@
     "@analogjs/content": "^1.10.1-beta.1",
     "@analogjs/router": "^1.10.1-beta.1",
     "@angular/animations": "^19.0.0",
-    "@angular/build": "^19.0.0",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -41,6 +40,8 @@
     "@analogjs/platform": "^1.10.1-beta.1",
     "@analogjs/vite-plugin-angular": "^1.10.1-beta.1",
     "@analogjs/vitest-angular": "^1.10.1-beta.1",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/build": "^19.0.0",
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "jsdom": "^22.0.0",
@@ -48,5 +49,10 @@
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^2.0.0"
+  },
+  "overrides": {
+    "@nx/angular": {
+      "@angular-devkit/build-angular": "$@angular-devkit/build-angular"
+    }
   }
 }
