fix(create-analog): set root property to empty on angular.json

--- a/packages/create-analog/template-blog/angular.json
+++ b/packages/create-analog/template-blog/angular.json
@@ -5,7 +5,7 @@
   "projects": {
     "blog": {
       "projectType": "application",
-      "root": ".",
+      "root": "",
       "sourceRoot": "src",
       "prefix": "blog",
       "architect": {
