--- a/package.json
+++ b/package.json
@@ -43,140 +43,144 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.0.0",
-    "@angular/cdk": "^20.0.0",
-    "@angular/common": "^20.0.0",
-    "@angular/compiler": "^20.0.0",
-    "@angular/core": "^20.0.0",
-    "@angular/forms": "^20.0.0",
-    "@angular/material": "^20.0.0",
-    "@angular/platform-browser": "^20.0.0",
-    "@angular/platform-browser-dynamic": "^20.0.0",
-    "@angular/platform-server": "^20.0.0",
-    "@angular/router": "^20.0.0",
-    "@angular/ssr": "~20.0.0",
-    "@astrojs/mdx": "^3.0.1",
+    "@angular/animations": "20.1.4",
+    "@angular/cdk": "20.1.4",
+    "@angular/common": "20.1.4",
+    "@angular/compiler": "20.1.4",
+    "@angular/core": "20.1.4",
+    "@angular/forms": "20.1.4",
+    "@angular/material": "20.1.4",
+    "@angular/platform-browser": "20.1.4",
+    "@angular/platform-browser-dynamic": "20.1.4",
+    "@angular/platform-server": "20.1.4",
+    "@angular/router": "20.1.4",
+    "@angular/ssr": "20.1.4",
+    "@astrojs/mdx": "^3.1.9",
     "@astrojs/react": "^4.3.0",
-    "@babel/core": "^7.21.8",
+    "@babel/core": "^7.28.0",
     "@mdx-js/react": "3.1.0",
-    "@nx/angular": "21.2.1",
-    "@nx/devkit": "21.2.1",
-    "@trpc/client": "^10.25.0",
-    "@trpc/server": "^10.25.0",
-    "ajv-formats": "^2.1.1",
+    "@nx/angular": "21.3.11",
+    "@nx/devkit": "21.3.11",
+    "@trpc/client": "^10.45.2",
+    "@trpc/server": "^10.45.2",
+    "ajv-formats": "^3.0.1",
     "defu": "^6.1.4",
-    "destr": "^2.0.1",
+    "destr": "^2.0.5",
     "front-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
-    "marked": "^15.0.7",
-    "marked-gfm-heading-id": "^4.1.1",
-    "marked-highlight": "^2.2.1",
-    "mermaid": "^10.2.4",
-    "radix3": "^1.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.0.0",
-    "rxjs": "7.8.0",
+    "marked": "^15.0.12",
+    "marked-gfm-heading-id": "^4.1.2",
+    "marked-highlight": "^2.2.2",
+    "mermaid": "^10.9.3",
+    "radix3": "^1.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "rxjs": "7.8.2",
     "semver": "^7.5.1",
     "superjson": "^2.2.1",
     "tslib": "^2.7.0",
     "ufo": "^1.5.4",
     "xhr2": "^0.2.1",
-    "zod": "^3.23.8",
+    "zod": "^3.25.76",
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.2000.0",
-    "@angular-devkit/build-angular": "^20.0.0",
-    "@angular-devkit/core": "^20.0.0",
-    "@angular-devkit/schematics": "^20.0.0",
+    "@angular-devkit/architect": "0.2001.4",
+    "@angular-devkit/build-angular": "20.1.4",
+    "@angular-devkit/core": "20.1.4",
+    "@angular-devkit/schematics": "20.1.4",
     "@angular-eslint/eslint-plugin": "20.1.1",
     "@angular-eslint/eslint-plugin-template": "20.1.1",
     "@angular-eslint/template-parser": "20.1.1",
-    "@angular/build": "^20.0.0",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "^20.0.0",
-    "@angular/language-service": "^20.0.0",
+    "@angular/build": "20.1.4",
+    "@angular/cli": "~20.1.4",
+    "@angular/compiler-cli": "20.1.4",
+    "@angular/language-service": "20.1.4",
     "@astrojs/markdown-component": "^1.0.5",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
-    "@netlify/functions": "^2.3.0",
-    "@nx/cypress": "21.2.1",
-    "@nx/eslint": "21.2.1",
-    "@nx/eslint-plugin": "21.2.1",
-    "@nx/jest": "21.2.1",
-    "@nx/js": "21.2.1",
-    "@nx/playwright": "21.2.1",
-    "@nx/plugin": "21.2.1",
-    "@nx/storybook": "21.2.1",
-    "@nx/vite": "21.2.1",
-    "@nx/web": "21.2.1",
-    "@playwright/test": "^1.36.0",
-    "@schematics/angular": "19.2.5",
+    "@commitlint/cli": "^17.8.1",
+    "@commitlint/config-conventional": "^17.8.1",
+    "@compodoc/compodoc": "^1.1.26",
+    "@netlify/functions": "^2.8.2",
+    "@nx/cypress": "21.3.11",
+    "@nx/eslint": "21.3.11",
+    "@nx/eslint-plugin": "21.3.11",
+    "@nx/jest": "21.3.11",
+    "@nx/js": "21.3.11",
+    "@nx/playwright": "21.3.11",
+    "@nx/plugin": "21.3.11",
+    "@nx/storybook": "21.3.11",
+    "@nx/vite": "21.3.11",
+    "@nx/web": "21.3.11",
+    "@playwright/test": "^1.54.2",
+    "@schematics/angular": "20.1.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/angular": "9.0.9",
-    "@storybook/builder-vite": "9.0.9",
-    "@swc-node/register": "1.9.2",
-    "@swc/cli": "0.6.0",
-    "@swc/core": "1.5.7",
-    "@swc/helpers": "0.5.11",
+    "@storybook/addon-docs": "9.0.18",
+    "@storybook/addon-links": "9.0.18",
+    "@storybook/angular": "9.0.18",
+    "@storybook/builder-vite": "9.0.18",
+    "@swc-node/register": "1.10.10",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.5.29",
+    "@swc/helpers": "0.5.17",
     "@types/babel__core": "^7.20.0",
-    "@types/hast": "^3.0.3",
-    "@types/jest": "29.5.14",
-    "@types/marked": "^5.0.0",
-    "@types/node": "22.14.0",
-    "@types/prismjs": "^1.26.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
+    "@types/hast": "^3.0.4",
+    "@types/jest": "30.0.0",
+    "@types/marked": "^5.0.2",
+    "@types/node": "22.17.0",
+    "@types/prismjs": "^1.26.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "^8.13.0",
     "@vitest/coverage-v8": "^3.0.5",
     "@vitest/ui": "^3.0.0",
     "all-contributors-cli": "^6.24.0",
-    "astro": "4.8.7",
-    "autoprefixer": "^10.4.19",
-    "conventional-changelog": "^3.1.25",
-    "conventional-changelog-cli": "^2.2.2",
-    "cpy-cli": "^4.2.0",
-    "cypress": "14.3.3",
-    "esbuild": "0.25.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "10.1.5",
-    "eslint-plugin-cypress": "3.5.0",
-    "eslint-plugin-playwright": "^1.6.2",
-    "execa": "^7.1.1",
+    "astro": "4.16.18",
+    "autoprefixer": "^10.4.21",
+    "conventional-changelog": "^4.0.0",
+    "conventional-changelog-cli": "^3.0.0",
+    "cpy-cli": "^5.0.0",
+    "cypress": "14.5.3",
+    "esbuild": "0.25.8",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-cypress": "3.6.0",
+    "eslint-plugin-playwright": "^1.8.3",
+    "execa": "^9.6.0",
     "fast-glob": "^3.2.12",
-    "fd-package-json": "^1.2.0",
-    "find-up": "^5.0.0",
+    "fd-package-json": "^2.0.0",
+    "find-up": "^7.0.0",
     "fs-extra": "^11.1.1",
     "h3": "^1.13.0",
-    "happy-dom": "^12.10.3",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jiti": "2.4.2",
-    "jsdom": "22.1.0",
-    "jsonc-eslint-parser": "^2.1.0",
+    "happy-dom": "^18.0.1",
+    "jest": "30.0.5",
+    "jest-environment-jsdom": "30.0.5",
+    "jest-util": "~30.0.5",
+    "jiti": "2.5.1",
+    "jsdom": "26.1.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "kolorist": "^1.6.0",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.3.0",
     "marked-mangle": "^1.1.10",
     "marked-shiki": "^1.1.0",
     "minimist": "^1.2.7",
-    "ng-packagr": "^20.0.0",
+    "ng-packagr": "20.1.0",
     "nitropack": "^2.11.0",
-    "nx": "21.2.1",
+    "nx": "21.3.11",
     "playwright": "^1.49.1",
     "postcss": "^8.4.21",
-    "postcss-import": "~15.1.0",
-    "postcss-preset-env": "~8.0.1",
+    "postcss-import": "~16.1.1",
+    "postcss-preset-env": "~10.2.4",
     "postcss-url": "~10.1.3",
     "prettier": "^3.5.0",
     "prismjs": "^1.29.0",
     "prompts": "^2.4.2",
     "rimraf": "^6.0.1",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "satori": "^0.10.14",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "satori": "^0.16.2",
     "satori-html": "^0.3.2",
     "semantic-release": "^22.0.7",
     "semantic-release-replace-plugin": "^1.2.7",
@@ -186,17 +190,17 @@
     "storybook": "9.0.9",
     "tailwindcss": "^3.1.0",
     "ts-dedent": "^2.0.0",
-    "ts-jest": "29.1.0",
-    "ts-morph": "^21.0.1",
-    "ts-node": "10.9.1",
-    "typescript": "~5.8.0",
+    "ts-jest": "29.4.0",
+    "ts-morph": "^26.0.0",
+    "ts-node": "10.9.2",
+    "typescript": "~5.8.3",
     "vfile": "^6.0.3",
     "vite": "7.0.0",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-inspect": "11.2.0",
+    "vite-plugin-inspect": "11.3.2",
     "vite-tsconfig-paths": "4.2.0",
-    "vitefu": "^1.0.0",
-    "vitest": "^3.2.0",
+    "vitefu": "^1.1.1",
+    "vitest": "^3.2.4",
     "webpack-bundle-analyzer": "^4.7.0",
     "xmlbuilder2": "^3.0.2"
   },
@@ -205,6 +209,7 @@
       "cypress"
     ],
     "onlyBuiltDependencies": [
+      "@compodoc/compodoc",
       "@swc/core",
       "core-js",
       "core-js-pure",
